php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #5526 Openlink support bug in PHP4.
Submitted: 2000-07-12 06:00 UTC Modified: 2001-01-17 09:33 UTC
From: silen at silen dot com Assigned: zeev (profile)
Status: Closed Package: Compile Failure
PHP Version: 4.0.1 OS: RH6.0
Private report: No CVE-ID: None
 [2000-07-12 06:00 UTC] silen at silen dot com
./configure --with-openlink --with-mysql=/usr/local --enable-discard-path --enable-force-cgi-redirect

Error:
php_odbc.c: In function `odbc_column_lengths':
php_odbc.c:606: `SQLINTEGER' undeclared (first use in this function)
php_odbc.c:606: (Each undeclared identifier is reported only once
php_odbc.c:606: for each function it appears in.)
php_odbc.c:606: parse error before `len'
php_odbc.c:634: `len' undeclared (first use in this function)
make[3]: *** [php_odbc.lo] Error 1


606 line in ext/odbc/php_odbc.h

"SQLINTEGER len;" should be replaced by "SDWORD len;" (taken from php3's functions/unified_odbc.c line)

after I changed that, PHP4 can be compiled smoothly.
I am 98% sure it is a bug.

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2000-07-22 20:59 UTC] david at cvs dot php dot net
I would change this but Zeev changed the SDWORD to SQLINTEGER in 4.0.1... assigning this to him.

(I note that SQLINTEGER is neither defined nor used elsewhere).


 [2000-09-15 04:05 UTC] ahill@php.net
This is confirmed as still existing in 4.0.2
 [2000-11-23 18:16 UTC] sniper@php.net
What's the situation with this bug ? Still valid? Zeev?

--Jani
 [2000-12-14 10:27 UTC] ahill@php.net
This bug is still active in the 14 Dec 2000 snap.

Also, NOTE - the file that needs to have:

SQLINTEGER len;  changed to
SDWORD len;

is not php_odbc.h but php_odbc.c

Best regards,
Andrew

 [2000-12-14 10:49 UTC] kalowsky@php.net
This was also a problem for the SOLID integration (mainly 2.3).  I had corrected this in the php_odbc.c awhile back for cases of #ifdefined (HAVE_SOLID).

All initial reports back from SolidEE2.3 users claim this works wonderfully.  
 [2000-12-28 14:29 UTC] kalowsky@php.net
I just added in a define(OPENLINK) to the HAVE_SOLID lines which will hopefully stop this.  I don't have Openlink to test with, but bug #8357 (duplicate) submitter had tested this change out and it seemed to work for them.  Please test and respond.

Zeev, if this is the wrong answer, I'll apologize now.  I figured it's better to have it compile (and work) then stay possibly broken through another release. 
 [2001-01-15 09:36 UTC] kalowsky@php.net
This fix should be in 4.0.4pl1, please test and comment back
 [2001-01-17 09:33 UTC] kalowsky@php.net
Haven't heard anything negative or postive  back from user.  If it still exists, reopen the bug...
 [2001-01-17 09:33 UTC] kalowsky@php.net
Haven't heard anything negative or postive  back from user.  If it still exists, reopen the bug...
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Wed Aug 19 05:00:01 2026 UTC